[gd_scene load_steps=2 format=3 uid="uid://main_menu"]

[ext_resource type="Script" path="res://scripts/scenes/main_menu.gd" id="1_main_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_menu")

[node name="BackgroundVisual" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.02, 0.02, 0.05, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchor_left = 0.0
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.2
offset_top = -30.0
offset_bottom = 30.0
text = "PROJECT HARMONY"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.42
anchor_right = 0.5
anchor_bottom = 0.42
offset_left = -120.0
offset_top = 0.0
offset_right = 120.0
offset_bottom = 50.0
text = "BEGIN RESONANCE"

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.42
anchor_right = 0.5
anchor_bottom = 0.42
offset_left = -120.0
offset_top = 186.0
offset_right = 120.0
offset_bottom = 236.0
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.42
anchor_right = 0.5
anchor_bottom = 0.42
offset_left = -120.0
offset_top = 248.0
offset_right = 120.0
offset_bottom = 298.0
text = "EXIT"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -30.0
offset_right = -10.0
offset_bottom = -10.0
text = "v0.2.0 Alpha"
